# HomeGroup

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: deployment.md  operations.md  telegram-setup.md
migrations/: env.py
migrations/versions/: 476f1784f1c3_add_settings_tables.py  b9257a8c23d3_initial_schema.py
ops/: Caddyfile  compose.yaml  nginx-homegroup.conf.example
src/homegroup/: __init__.py  cli.py  worker.py
src/homegroup/application/: audit.py  bootstrap.py  ports.py  repositories.py  schemas.py  services.py
src/homegroup/domain/: enums.py  rules.py
src/homegroup/infrastructure/: ai.py  config.py  logging.py  telegram.py
src/homegroup/infrastructure/db/: base.py  models.py  repositories.py  session.py
src/homegroup/presentation/: app.py  auth.py
src/homegroup/templates/: __init__.py
templates/: analytics.html  archive.html  automation.html  backups.html  base.html  dashboard.html  entities.html  notes.html  settings.html  templates_manager.html  today.html  week.html
tests/: __init__.py  test_auth.py  test_domain_rules.py  test_service_flows.py  test_telegram_provisioning.py
